2000-09-07  Laurent Pautet  <pautet@inf.enst.fr>

	* s-shasto.ads, s-shasto.adb, Makefile.am, Makefile.in: Replace
 	s-shamem with s-shasto.

2000-09-02  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gartas.adb, s-gartas.ads: Remove usage of requeue statements
 	and replace them with uses of watchers. Export Mutex_PO because an
 	ATC construct needs a entry call as statement for the first
 	alternative. Needed to remove requeue statement in
 	System.RPC.Server. Reorganize code in alphabetic order. This fix
 	will help for 7830-007 and improve the code anyway.

	* s-rpcser.adb: Remove usage of requeue statements and clean up
 	the original implementation. Simplify implementation of RPC
 	abortions and anonymous tasks pool management. 

2000-08-16  Laurent Pautet  <pautet@scapin.enst.fr>

	* s-gaprtc.adb: Remove Interfaces.C.Strings dependency. Fix 7807-007.

2000-07-13  Samuel Tardieu <sam@inf.enst.fr>

	* Makefile.am: Do not assume that the current directory is in the
	PATH. Do not assume that the build directory is the source
	directory.

2000-07-10  Laurent Pautet  <pautet@inf.enst.fr>

	* s-gprese.ads: Typo.

2000-07-04  Laurent Pautet  <pautet@inf.enst.fr>

	* Makefile.am, Makefile.in: Add all the server children and rename
 	the protocol units in order to be in the Garlic.Protocols
 	hierarchy. Add an Ada program b_gaprco to build s-gaprco.adb.

	* s-gaphlo.adb, s-gaphlo.ads: Location_Type is no longer a
 	controlled type - no dynamically allocated data
 	anymore. Therefore, Get_Data returns now a string instead of a
 	string access.

	* s-gasoli.adb, s-gasoli.ads: Add soft_links concerning gnat
 	tasking especially termination, priority and abortion. Remove
 	barriers and replace them with watchers.
	
	* s-gaprob.adb, s-gaprob.ads: Replace with s-gartas.adb and
 	s-gartas.ads - System.Garlic.Tasking. Define new soft_links needed 
	in System.Garlic.Soft_Links (see above).

	* s-ganota.adb, s-ganota.ads: Add unit System.Garlic.No_Tasking